--- a/table1.html
+++ b/table1.html
@@ -41,10 +41,16 @@
         #odd {
             background-color: white;
         }
+        h1{
+            text-align: center;
+        }
 
         
     </style>
 <table  >
+
+    <h1>Table 1-Activity 1</h1>
+
     <tr id="h">
         <th style="border-top-left-radius: 7px; padding-left: 20px;">Rank</th>
         <th>Name</th>
@@ -73,6 +79,7 @@
     </tr>
 </table>
 
+<a href="table2.html">Table 2 Click here</a>
 
 
 
