--- a/table2.html
+++ b/table2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Single Cell Column</title>
+  <title>Table 2</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -38,12 +38,12 @@
       border-top-left-radius: 8px;
     }
     tr.grey th,
-tr.green th,
-tr.blue th,
-tr.navy th,
-tr.sea th {
-  background-color: inherit;
-}
+    tr.green th,
+    tr.blue th,
+    tr.navy th,
+    tr.sea th {
+    background-color: inherit;
+    }
     .grey { background-color: rgb(174, 174, 174); }
     .green { background-color: rgb(82, 143, 82); }
     .blue { background-color: rgb(140, 189, 220); }
@@ -51,17 +51,23 @@ tr.sea th {
     .sea { background-color: steelblue; }
 
 
-tr.init th {
-    background-color: white;
-}
+    tr.init th {
+        background-color: white;
+    }
 
-.live {
-    color: green;
-}
+    .live {
+        color: green;
+    }
+    
+   
+    h1 {
+        text-align: center;
+    }
    
   </style>
 </head>
 <body>
+<h1>Table 2-Activity 2</h1>
   <div id="er">
     <table id="nm">
       <tr class="init">
@@ -71,7 +77,7 @@ tr.init th {
         <th>2016</th>
       </tr>
       <tr class="grey">
-        <th class="first">XXXX1</th>
+        <th class="first">XXXX</th>
         <td  rowspan="5">
           &nbsp;O XIX <span class="live">&nbsp;&nbsp;&nbsp;(+50)</span><br><br><br>
           &nbsp;O XIX <span class="live">&nbsp;&nbsp;&nbsp;(+1/0)</span><br><br><br>
@@ -79,19 +85,19 @@ tr.init th {
           &nbsp;O XIX <span class="live">&nbsp;&nbsp;&nbsp;(+30)</span><br><br><br>
           &nbsp;O XIX <span class="live">&nbsp;&nbsp;&nbsp;(+.50)</span>
         </td>
-        <td class="single-td" rowspan="5">
+        <td rowspan="5">
+          &nbsp;O XIX <span class="live">(+5)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+30)</span><br><br><br>
           &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span>
+          &nbsp;O XIX <span class="live">(+20)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+.02)</span>
         </td>
         <td class="single-td" rowspan="5">
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span><br><br><br>
-          &nbsp;O XIX <span class="live">(+50)</span>
+          &nbsp;O XIX <span class="live">(+30)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+20)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+4)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+.002)</span><br><br><br>
+          &nbsp;O XIX <span class="live">(+40)</span>
         </td>
       </tr>
       <tr class="green">
@@ -113,8 +119,5 @@ tr.init th {
     </table>
   </div>
 
-  <style>
-    
-  </style>
-</body>
+<a href="table1.html">Table 1 Click here</a>
 </html>
